# copilot-computer-use

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  pyproject.toml
config/: default.yaml
examples/: test_streaming.py  test_vision.py
src/: __init__.py  main.py
src/agent/: __init__.py  actions.py  loop.py  planner.py
src/copilot/: __init__.py  auth.py  client.py  config.py
src/executor/: __init__.py  base.py  linux.py  macos.py
src/screen/: __init__.py  annotate.py  capture.py
tests/: test_actions.py  test_client.py  test_config.py  test_screen_and_loop.py
